--- a/lib/utils/serial/Kconfig
+++ b/lib/utils/serial/Kconfig
@@ -34,6 +34,11 @@ config FDT_SERIAL_SHAKTI
 	select SERIAL_SHAKTI
 	default n
 
+config FDT_SERIAL_MINDGROVE
+	bool "Mindgrove UART FDT driver"
+	select SERIAL_MINDGROVE
+	default n
+
 config FDT_SERIAL_SIFIVE
 	bool "SiFive UART FDT driver"
 	select SERIAL_SIFIVE
@@ -70,6 +75,10 @@ config SERIAL_RENESAS_SCIF
 
 config SERIAL_SHAKTI
 	bool "Shakti UART support"
+	default n
+
+config SERIAL_MINDGROVE
+	bool "Mindgrove UART support"
 	default n
 
 config SERIAL_SIFIVE
